<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextIdCarrera"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:textColor="#554B4B"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEdad"
        tools:text="@string/id"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/edad"
        android:inputType="number"
        android:textColor="#554B4B"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidos"
        tools:text="@string/edad"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:textColor="#554B4B"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombres"
        tools:text="@string/apellidos"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="331dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:text="@string/registro_de_estudiantes"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumMat"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/matricula"
        android:inputType="number"
        android:textColor="#554B4B"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/matricula"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNombres"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/nombres"
        android:inputType="textPersonName"
        android:textColor="#554B4B"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumMat"
        tools:text="@string/nombres"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:onClick="registro"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdCarrera" />

    <Button
        android:id="@+id/button2"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="consultaMatricula"
        android:text="@string/consultar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="modificarInformacion"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="eliminarEstudiante"
        android:text="@string/eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>